2001-11-13  Seth Robertson  <seth@startide.sysdetect.com>

	* src/proto.c (main): You must use bk_general_debug_config *in place of*
	bk_debug_setconfig, not in addition to.

	* lib/b_signal.c (bk_signal): Common interface to async signal handlers

	* lib/b_relay.c: IOH relay code

	* lib/b_ioh.c (ioht_raw_other): Remove data from queue after freeing it.
	IOH now working (for some value of working) in RAW mode
	
	* test/test_ioh.c (relayer): Bug which caused us to trash memory

	* lib/b_error.c (bk_error_idump): Change order--less recent comes first

2001-11-13  Alexander Dupuy  <dupuy@sysdetect.com>

	* test/test_ioh.c (proginit): inet_aton returns zero on error
	(address_resolved): cast sockaddr * argument

2001-11-13  Seth Robertson  <seth@yeah.baka.org>

	* test/test_ioh.c: Add test program
	* lib/b_ioh.c: Add stdio functions

2001-11-12  Seth Robertson  <seth@yeah.baka.org>

	* src/proto.c: Doxygenate

	* lib/b_ioh.c: IOH is now code-complete

2001-11-12  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_getbyfoo.c (copy_hostent): Fencepost error in copying host
	address list.
	(bk_gethostbyfoo): Do not do FQDN searches be default. Allow them
	based on flag.
	(bk_gethostbyfoo): Save addresses in the correct way.

2001-11-08  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_netinfo.c: New file dealing with various aspects of
	network information. All utility functions (perhaps should be
	broken out into two files).

	* lib/b_getbyfoo.c: Port to new BK_MALLOC(CALLOC) semantics.

	* lib/b_string.c (bk_strlen): Acts like strlen, but bounded.

2001-11-07  James Tanis  <jtt@winwood.sysdetect.com>

	* b_run.c: Add function to turn off run. If the run is over make
	sure that select(2) doesn't block.

	* Added bk_gethostbyfoo and support.

2001-11-07  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_general.c: Convert BK_MALLOC to new semantic
	* lib/b_run.c: Convert BK_MALLOC to new semantic